--- a/01_Introduction/02_Creating_and_Using_Tensors/02_tensors.ipynb
+++ b/01_Introduction/02_Creating_and_Using_Tensors/02_tensors.ipynb
@@ -8,7 +8,9 @@
    },
    "source": [
     "# Tensors\n",
-    "## This script introduces various ways to create tensors in TensorFlow"
+    "## This script introduces various ways to create tensors in TensorFlow\n",
+    "\n",
+    "### declare Tensor with shape or value(tf.Varialbe + tf.Constants) -> sess.run(initialiser) -> sess.run(evaluate value)"
    ]
   },
   {
@@ -335,7 +337,7 @@
     }
    ],
    "source": [
-    "fill_var = tf.Variable(tf.fill([row_dim, col_dim], -1))\n",
+    "fill_var = tf.Variable(tf.fill([row_dim, col_dim], value=-1))\n",
     "sess.run(fill_var.initializer)\n",
     "print(sess.run(fill_var))"
    ]
