--- a/02_TensorFlow_Way/03_Working_with_Multiple_Layers/03_multiple_layers.ipynb
+++ b/02_TensorFlow_Way/03_Working_with_Multiple_Layers/03_multiple_layers.ipynb
@@ -130,7 +130,11 @@
     "# Create a layer that takes a spatial moving window average\n",
     "# Our window will be 2x2 with a stride of 2 for height and width\n",
     "# The filter value will be 0.25 because we want the average of the 2x2 window\n",
-    "my_filter = tf.constant(0.25, shape=[2, 2, 1, 1])\n",
+    "\n",
+    "# input tensor of shape = [batch, in_height, in_width, in_channels] \n",
+    "# a filter / kernel tensor of shape = [filter_height, filter_width, in_channels, out_channels]\n",
+    "# stride_shape = \"NHWC\" =  [batch, height, width, channels]\n",
+    "my_filter = tf.constant(value=0.25, shape=[2, 2, 1, 1])\n",
     "my_strides = [1, 2, 2, 1]\n",
     "mov_avg_layer= tf.nn.conv2d(x_data, my_filter, my_strides,\n",
     "                            padding='SAME', name='Moving_Avg_Window')"
