--- a/03_Linear_Regression/06_Implementing_Lasso_and_Ridge_Regression/06_lasso_and_ridge_regression.ipynb
+++ b/03_Linear_Regression/06_Implementing_Lasso_and_Ridge_Regression/06_lasso_and_ridge_regression.ipynb
@@ -19,7 +19,7 @@
    },
    "outputs": [],
    "source": [
-    "# import required libraries\n",
+    "# import required librariesw\n",
     "import matplotlib.pyplot as plt\n",
     "import sys\n",
     "import numpy as np\n",
