--- a/05_Nearest_Neighbor_Methods/02_Working_with_Nearest_Neighbors/02_nearest_neighbor.ipynb
+++ b/05_Nearest_Neighbor_Methods/02_Working_with_Nearest_Neighbors/02_nearest_neighbor.ipynb
@@ -221,7 +221,7 @@
     "x_sums_repeated = tf.matmul(x_sums,tf.ones([1, k], tf.float32))\n",
     "x_val_weights = tf.expand_dims(tf.div(top_k_xvals,x_sums_repeated), 1)\n",
     "\n",
-    "top_k_yvals = tf.gather(y_target_train, top_k_indices)\n",
+    "top_k_yvals = tf.gather(params=y_target_train, indices=top_k_indices)\n",
     "prediction = tf.squeeze(tf.matmul(x_val_weights,top_k_yvals), axis=[1])\n",
     "#prediction = tf.reduce_mean(top_k_yvals, 1)\n",
     "\n",
