--- a/05_Nearest_Neighbor_Methods/03_Working_with_Text_Distances/03_text_distances.ipynb
+++ b/05_Nearest_Neighbor_Methods/03_Working_with_Text_Distances/03_text_distances.ipynb
@@ -50,13 +50,13 @@
    "source": [
     "hypothesis = list('bear')\n",
     "truth = list('beers')\n",
-    "h1 = tf.SparseTensor([[0,0,0], [0,0,1], [0,0,2], [0,0,3]],\n",
-    "                     hypothesis,\n",
-    "                     [1,1,1])\n",
+    "h1 = tf.SparseTensor(indices=[[0,0,0], [0,0,1], [0,0,2], [0,0,3]],\n",
+    "                     values=hypothesis,\n",
+    "                     dense_shape=[1,1,1])\n",
     "\n",
-    "t1 = tf.SparseTensor([[0,0,0], [0,0,1], [0,0,2], [0,0,3],[0,0,4]],\n",
-    "                     truth,\n",
-    "                     [1,1,1])\n",
+    "t1 = tf.SparseTensor(indices=[[0,0,0], [0,0,1], [0,0,2], [0,0,3],[0,0,4]],\n",
+    "                     values=truth,\n",
+    "                     dense_shape=[1,1,1])\n",
     "\n",
     "print(sess.run(tf.edit_distance(h1, t1, normalize=False)))"
    ]
