--- a/06_Neural_Networks/03_Working_with_Activation_Functions/03_activation_functions.ipynb
+++ b/06_Neural_Networks/03_Working_with_Activation_Functions/03_activation_functions.ipynb
@@ -18,7 +18,22 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/admin-/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n  return f(*args, **kwds)\n/home/admin-/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n  from ._conv import register_converters as _register_converters\n/home/admin-/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n  return f(*args, **kwds)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/admin-/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n  return f(*args, **kwds)\n/home/admin-/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -46,7 +61,7 @@
     "b1 = tf.Variable(tf.random_uniform(shape=[1,1]))\n",
     "a2 = tf.Variable(tf.random_normal(shape=[1,1]))\n",
     "b2 = tf.Variable(tf.random_uniform(shape=[1,1]))\n",
-    "x = np.random.normal(2, 0.1, 500)\n",
+    "x = np.random.normal(loc=2, scale=0.1, size=500)\n",
     "x_data = tf.placeholder(shape=[None, 1], dtype=tf.float32)\n",
     "\n",
     "sigmoid_activation = tf.sigmoid(tf.add(tf.matmul(x_data, a1), b1))\n",
@@ -106,18 +121,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Optimizing Sigmoid AND Relu Output to 0.75\n",
-      "sigmoid = 0.126552 relu = 2.02276\n",
-      "sigmoid = 0.178638 relu = 0.75303\n",
-      "sigmoid = 0.247698 relu = 0.74929\n",
-      "sigmoid = 0.344675 relu = 0.749955\n",
-      "sigmoid = 0.440066 relu = 0.754\n",
-      "sigmoid = 0.52369 relu = 0.754772\n",
-      "sigmoid = 0.583739 relu = 0.75087\n",
-      "sigmoid = 0.627335 relu = 0.747023\n",
-      "sigmoid = 0.65495 relu = 0.751805\n",
-      "sigmoid = 0.674526 relu = 0.754707\n"
+      "\nOptimizing Sigmoid AND Relu Output to 0.75\nsigmoid = 0.12655208 relu = 2.0227606\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sigmoid = 0.17863758 relu = 0.7530296\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sigmoid = 0.24769811 relu = 0.7492897\nsigmoid = 0.3446748 relu = 0.7499546\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sigmoid = 0.4400661 relu = 0.7539999\nsigmoid = 0.5236898 relu = 0.754772\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sigmoid = 0.58373857 relu = 0.7508698\nsigmoid = 0.62733483 relu = 0.7470234\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sigmoid = 0.6549499 relu = 0.75180537\nsigmoid = 0.67452586 relu = 0.75470716\n"
      ]
     }
    ],
