--- a/07_Natural_Language_Processing/02_Working_with_Bag_of_Words/02_bag_of_words.ipynb
+++ b/07_Natural_Language_Processing/02_Working_with_Bag_of_Words/02_bag_of_words.ipynb
@@ -338,7 +338,7 @@
    "source": [
     "# Text-Vocab Embedding\n",
     "x_embed = tf.nn.embedding_lookup(identity_mat, x_data)\n",
-    "x_col_sums = tf.reduce_sum(x_embed, 0)\n",
+    "x_col_sums = tf.reduce_sum(x_embed, axis=0)\n",
     "\n",
     "# Declare model operations\n",
     "x_col_sums_2D = tf.expand_dims(x_col_sums, 0)\n",
@@ -394,7 +394,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
