--- a/07_Natural_Language_Processing/06_Using_Word2Vec_Embeddings/06_using_word2vec.ipynb
+++ b/07_Natural_Language_Processing/06_Using_Word2Vec_Embeddings/06_using_word2vec.ipynb
@@ -314,7 +314,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
