--- a/09_Recurrent_Neural_Networks/06_Training_A_Siamese_Similarity_Measure/06_siamese_similarity_driver.ipynb
+++ b/09_Recurrent_Neural_Networks/06_Training_A_Siamese_Similarity_Measure/06_siamese_similarity_driver.ipynb
@@ -240,8 +240,9 @@
    "outputs": [],
    "source": [
     "# Define Model\n",
+    "# snn(address1, address2, dropout_keep_prob, vocab_size, num_features, input_length)\n",
     "text_snn = model.snn(address1_embed, address2_embed, dropout_keep_prob_ph,\n",
-    "                     vocab_length, num_features, max_address_len)"
+    "                     vocab_length, num_features, input_length=max_address_len)"
    ]
   },
   {
@@ -298,7 +299,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
